--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4001
-DB_CNN=mongodb+srv://mern_user:XXXXXXXXXX@calendardb.x6vi7gs.mongodb.net/mern_calendar
+DB_CNN=mongodb+srv://mern_user:6ZCPdCJza0e16UOz@calendardb.x6vi7gs.mongodb.net/mern_calendar
